--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="assets/css/star.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="assets/css/github.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- FONTS -->
@@ -170,7 +169,7 @@
                         <h5>HackCU</h5>
                         <b><p class="helping-text">Director of Operations - Oct 2015 to Present</p></b>
                         <p>As director, I oversee the web development, sponsorship, and design team. I am also lead web
-                            designer for the event's main website, <a href="hackcu.org">HackCU.org.</a></p>
+                            designer for the event's main website, <a href="http://hackcu.org/">HackCU.org.</a></p>
                     </div>
 
 
