--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="assets/css/star.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -247,7 +247,7 @@
                         <p>Github houses all of my small personal projects. It includes hackathon projects, my personal website,
                         and class projects.</p>
                         <div class="github">
-                            <a target="_blank" href="https://github.com/jessalbarian"><img class="img.responsive-img" src="http://ghchart.rshah.org/jessalbarian" alt="2016rshah's Github chart" /></a>
+                            <!--<a target="_blank" href="https://github.com/jessalbarian"><img class="img.responsive-img" src="http://ghchart.rshah.org/jessalbarian" alt="2016rshah's Github chart" /></a>-->
                         </div>
                     </div>
                 </div>
