--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <title>Jessie Albarian</title>
+    <link rel="icon" type="images/fav" sizes="16x16" href="assets/images/favicon.ico">
+
 
     <!-- CSS -->
     <link href="assets/css/star.css" type="text/css" rel="stylesheet"/>
