updated font sizes

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 
                     <!--CONTACT ME-->
+                    <element id="contact">
                     <div class="block">
                         <h5 class="left-align"><i class="mdi-action-perm-phone-msg"></i>
                             Contact
@@ -81,7 +82,7 @@
                             <a href="mailto:jessica.albarian@colorado.edu" target="_blank">Email Me</a><br/>
                         </p>
                     </div>
-
+                    </element>
 
 
 
