--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     <div class="block">
                         <h5>Lockheed Martin</h5>
                         <b><p class="helping-text">Intern </a>- Feb 2015 to Present</p></b>
-                        <p>I worked with C#, ASP.net, and a SQL database to maintain a website and database for
-                            staffing.</p>
+                        <p>I work with C#, ASP.net, and a SQL database to maintain a website and database for
+                            staffing. I also hold a Secret clearance.</p>
                     </div>
 
 
@@ -226,6 +226,13 @@
                         <h5>CU App</h5>
                         <b><p class="helping-text">iOS Developer and Lead Designer - Mar 2016 to Present</p></b>
                         <p>A team and I are creating a mobile app for the University of Colorado Boulder.</p>
+                    </div>
+
+                    <!-- Patches -->
+                    <div class="block">
+                        <h5>Patches</h5>
+                        <b><p class="helping-text">iOS Developer and Lead Designer - Oct 2015 to Present</p></b>
+                        <p>I am building a mobile app for local animal shelters to help get more animals adopted.</p>
                     </div>
 
                     <!-- Other Personal Projects -->
