added resume, took image down

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                         class="fa fa-twitter fa-2x"></i></a>
                                 </li>
                             </ul>
+                            <p>Download my resume <a href="/assets/images/resume.zip" target="_blank" download>here.</a></p>
                         </div>
                     </div>
 
@@ -264,10 +265,15 @@
 
 
     </div>
+    <footer>
+        <div class="center">
+            <p>Made with <i class="fa fa-heart"></i> by Jessie</p>
+        </div>
+    </footer>
 </div>
-    <div class="flatiron img.responsive-img">
-        <img src="assets/images/short.png" alt="mountain"/>
-    </div>
+    <!--<div class="flatiron img.responsive-img">-->
+        <!--<img src="assets/images/short.png" alt="mountain"/>-->
+    <!--</div>-->
 
 <!--  Scripts-->
 <script src="assets/js/stars.js"></script>
