unbolded random bold thing

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <h4><i class="mdi-social-school"></i> Education</h4>
                     <div class="block">
                         <h5>University of Colorado Boulder</h5>
-                        <b><p class="helping-text">Bachelors of Science Computer Science - Dec 2017</b>
+                        <p class="helping-text">Bachelors of Science Computer Science - Dec 2017
                         </p>
                     </div>
 
