changed photo and red heart and font size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col s12 m12">
                 <div class="col s12 m4 left-side">
                     <div class="block face">
-                        <img src="assets/images/squareme.png" alt="" class="circle face user-img img.responsive-img">
+                        <img src="assets/images/me.png" alt="" class="circle face user-img img.responsive-img">
                         <h3 class="center white-text">Jessie Albarian</h3>
                         <!--<h4 class="center light typing"></h4>-->
                     </div>
@@ -267,7 +267,7 @@
     </div>
     <footer>
         <div class="center">
-            <p>Made with <i class="fa fa-heart"></i> by Jessie</p>
+            <p>Made with <i class="fa fa-heart red-text"></i> by Jessie</p>
         </div>
     </footer>
 </div>
