--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
                     <!--SOCIAL MEDIA-->
-                    <div class="block social  flatiron">
+                    <div class="block social flatiron">
                         <div class="col m12 center">
                             <ul class="list-inline social-buttons">
                                 <li><a href="https://www.linkedin.com/in/jessiealbarian" target="_blank"><i
@@ -53,7 +53,7 @@
                                         class="fa fa-twitter fa-2x"></i></a>
                                 </li>
                             </ul>
-                            <p>Download my resume <a href="/assets/images/resume.zip" target="_blank" download>here.</a></p>
+                            <p>Download my resume <a href="/assets/images/resume.zip" download>here.</a></p>
                         </div>
                     </div>
 
@@ -240,7 +240,7 @@
                     <div class="block">
                         <h5>Personal Projects</h5>
                         <b><p class="helping-text">Developer - June 2015 to Present</p></b>
-                        <p>Github houses all of my small personal projects. It includes hackathon projects, my personal website,
+                        <p><a href="https://github.com/jessalbarian" target="_blank">Github</a> houses all of my small personal projects. It includes hackathon projects, my personal website,
                         and class projects.</p>
                         <div class="github">
                             <!--<a target="_blank" href="https://github.com/jessalbarian"><img class="img.responsive-img" src="http://ghchart.rshah.org/jessalbarian" alt="2016rshah's Github chart" /></a>-->
