--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col s12 m12">
                 <div class="col s12 m4 left-side">
                     <div class="block face">
-                        <img src="assets/images/me.png" alt="" class="circle face user-img img.responsive-img">
+                        <img src="assets/images/fallme.jpg" alt="" class="circle face user-img img.responsive-img">
                         <h3 class="center white-text">Jessie Albarian</h3>
                         <!--<h4 class="center light typing"></h4>-->
                     </div>
