added flatiron image back

--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
         </div>
     </footer>
 </div>
-    <!--<div class="flatiron img.responsive-img">-->
-        <!--<img src="assets/images/short.png" alt="mountain"/>-->
-    <!--</div>-->
+    <div class="flatiron img.responsive-img">
+        <img src="assets/images/flatironshort.png" alt="mountain"/>
+    </div>
 
 <!--  Scripts-->
 <script src="assets/js/stars.js"></script>
