--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
                 <div class="col s12 m8 right-side">
                     <h4 class="left-align"><i class="mdi-action-group-work"></i>Experience</h4>
 
+                    <!-- FREELANCE -->
+                    <div class="block">
+                        <h5>Freelancer</h5>
+                        <b><p class="helping-text">Graphic Designer and Wed Developer </a>- Feb 2015 to Present</p></b>
+                        <p>I do graphic design, website design and development, and Wordpress for companies and
+                            individuals.</p>
+                    </div>
 
                     <!-- LOCKHEED -->
                     <div class="block">
@@ -156,9 +163,9 @@
                     <!-- HackCU -->
                     <div class="block">
                         <h5>HackCU</h5>
-                        <b><p class="helping-text">Director of Operations - Oct 2015 to Present</p></b>
-                        <p>As director, I oversee the web development, sponsorship, and design team. I am also lead web
-                            designer for the event's main website, <a href="http://hackcu.org/">HackCU.org.</a></p>
+                        <b><p class="helping-text">Director of HackCU - Oct 2015 to Present</p></b>
+                        <p>As director, I oversee the web development, sponsorship, operations and design team. I am also head
+                            of marketing and lead web designer for the event's main website, <a href="http://hackcu.org/">HackCU.org.</a></p>
                     </div>
 
 
@@ -237,7 +244,7 @@
                     </div>
 
                     <!-- Other Personal Projects -->
-                    <div class="block">
+                    <div class="block" style="margin-bottom: 200px;">
                         <h5>Personal Projects</h5>
                         <b><p class="helping-text">Developer - June 2015 to Present</p></b>
                         <p><a href="https://github.com/jessalbarian" target="_blank">Github</a> houses all of my small personal projects. It includes hackathon projects, my personal website,
