--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                     <!-- FREELANCE -->
                     <div class="block">
                         <h5>Freelancer</h5>
-                        <b><p class="helping-text">Graphic Designer and Wed Developer </a>- Feb 2015 to Present</p></b>
-                        <p>I do graphic design, website design and development, and Wordpress for companies and
+                        <b><p class="helping-text">Graphic Designer and Web Developer </a>- Feb 2015 to Present</p></b>
+                        <p>I do graphic design, website design and development for companies and
                             individuals.</p>
                     </div>
 
@@ -223,10 +223,10 @@
 
                     <!-- MOBILE MAKERS -->
                     <div class="block">
-                        <h5>MOBILE MAKERS</h5>
+                        <h5>Mobile Makers</h5>
                         <b><p class="helping-text">President of Mobile Makers - Sep 2015 to Present</p></b>
-                        <p>ATLAS Mobile Makers is the only mobile app development club on campus. We teach students iOS
-                            and Android development.</p>
+                        <p>ATLAS Mobile Makers is the only mobile app development club on campus. I teach students iOS
+                            and Android development: mobilemakers.io</p>
                     </div>
 
                     <!-- CU App -->
