--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
                     <div class="block">
                         <h5>Freelancer</h5>
                         <b><p class="helping-text">Graphic Designer and Web Developer </a>- Feb 2015 to Present</p></b>
-                        <p>I do graphic design, website design and development for companies and
-                            individuals.</p>
+                        <p>Freelance graphic design, website design and development.</p>
                     </div>
 
                     <!-- LOCKHEED -->
@@ -278,9 +277,9 @@
         </div>
     </footer>
 </div>
-    <div class="flatiron img.responsive-img">
-        <img src="assets/images/flatironshort.png" alt="mountain"/>
-    </div>
+    <!--<div class="flatiron img.responsive-img">-->
+        <!--<img src="assets/images/flatironshort.png" alt="mountain"/>-->
+    <!--</div>-->
 
 <!--  Scripts-->
 <script src="assets/js/stars.js"></script>
