--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col s12 m12">
                 <div class="col s12 m4 left-side">
                     <div class="block face">
-                        <img src="assets/images/fallme.jpg" alt="" class="circle face user-img img.responsive-img">
+                        <img src="assets/images/me.jpg" alt="" class="circle face user-img img.responsive-img">
                         <h3 class="center white-text">Jessie Albarian</h3>
                         <!--<h4 class="center light typing"></h4>-->
                     </div>
@@ -80,7 +80,7 @@
                             Contact
                         </h5>
                         <p>Boulder, CO<br/>
-                            <a href="mailto:jessica.albarian@colorado.edu" target="_blank">Email Me</a><br/>
+                            <a href="mailto:albarian.jess@gmail.com" target="_blank">Email Me</a><br/>
                         </p>
                     </div>
                     </element>
@@ -93,45 +93,85 @@
                         <h5 class="left-align"><i class="mdi-action-stars"></i>
                             Skills and Languages
                         </h5>
-                        <h6>Adobe Illustrator</h6>
-                        <div class="progress">
-                            <div class="progress-bar" style="width: 75%;"></div>
-                        </div>
-                        <h6>Web Design</h6>
-                        <div class="progress">
-                            <div class="progress-bar" style="width: 80%;"></div>
-                        </div>
+
                         <h6>Bootstrap</h6>
                         <div class="progress">
                             <div class="progress-bar" style="width: 90%;"></div>
                         </div>
+
                         <h6>C++</h6>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 35%;"></div>
+                            <div class="progress-bar" style="width: 30%;"></div>
                         </div>
+
                         <h6>Python</h6>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 35%;"></div>
+                            <div class="progress-bar" style="width: 30%;"></div>
                         </div>
+
                         <h6>C#</h6>
                         <div class="progress">
                             <div class="progress-bar" style="width: 30%;"></div>
                         </div>
+
+                        <h6>ASP.NET</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 30%;"></div>
+                        </div>
+
                         <h6>Swift</h6>
                         <div class="progress">
-                            <div class="progress-bar" style="width: 50%;"></div>
+                            <div class="progress-bar" style="width: 45%;"></div>
                         </div>
+
                         <h6>HTML/CSS</h6>
                         <div class="progress">
                             <div class="progress-bar" style="width: 85%;"></div>
                         </div>
+
+                        <h6>Javascript</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 15%;"></div>
+                        </div>
+
                         <h6>SQL</h6>
                         <div class="progress">
                             <div class="progress-bar" style="width: 75%;"></div>
                         </div>
+
+                        <h6>SQL Databases</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 50%;"></div>
+                        </div>
+
+                        <h6>NoSQL Databases</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 25%;"></div>
+                        </div>
+
                         <h6>Java</h6>
                         <div class="progress">
                             <div class="progress-bar" style="width: 50%;"></div>
+                        </div>
+
+                        <h6>Adobe Illustrator</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 75%;"></div>
+                        </div>
+
+                        <h6>Adobe Photoshop</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 75%;"></div>
+                        </div>
+
+                        <h6>Web Design</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 80%;"></div>
+                        </div>
+
+                        <h6>Mobile App Development</h6>
+                        <div class="progress">
+                            <div class="progress-bar" style="width: 60%;"></div>
                         </div>
                     </div>
                 </div>
@@ -143,6 +183,13 @@
                 <div class="col s12 m8 right-side">
                     <h4 class="left-align"><i class="mdi-action-group-work"></i>Experience</h4>
 
+                    <!-- Made Movement -->
+                    <div class="block">
+                        <h5>Made Movement</h5>
+                        <b><p class="helping-text">Technology Intern </a>- June 2016 to Aug 2016</p></b>
+                        <p>I assist with iOS and Android app development, specifically Bluetooth related projects.</p>
+                    </div>
+
                     <!-- FREELANCE -->
                     <div class="block">
                         <h5>Freelancer</h5>
@@ -153,7 +200,7 @@
                     <!-- LOCKHEED -->
                     <div class="block">
                         <h5>Lockheed Martin</h5>
-                        <b><p class="helping-text">Intern </a>- Feb 2015 to Present</p></b>
+                        <b><p class="helping-text">Intern </a>- Feb 2015 to June 2016</p></b>
                         <p>I work with C#, ASP.net, and a SQL database to maintain a website and database for
                             staffing. I also hold a Secret clearance.</p>
                     </div>
