took resume off

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                         class="fa fa-twitter fa-2x"></i></a>
                                 </li>
                             </ul>
-                            <p>Download my resume <a href="/assets/images/resume.zip" download>here.</a></p>
+                            <!--<p>Download my resume <a href="/assets/images/resume.zip" download>here.</a></p>-->
                         </div>
                     </div>
 
